Update slide - Web Crawler in Python

--- a/notebook/crawler/Web Crawler in Python.ipynb
+++ b/notebook/crawler/Web Crawler in Python.ipynb
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Requests: HTTP for Humans \n",
+    "## Requests: Process HTTP request and response \n",
     "- Requests is an Apache2 Licensed HTTP library\n",
     "- Powered by urllib3, which is embedded within Requests.\n",
     "- Document: http://docs.python-requests.org/en/latest/"
@@ -181,19 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied (use --upgrade to upgrade): requests in /Users/dainese/miniconda2/envs/jupyter/lib/python3.5/site-packages\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install requests"
    ]
@@ -207,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -232,20 +224,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Response [200]>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = requests.get(\"https://api.github.com/events\")\n",
     "print(response)"
@@ -341,6 +325,27 @@
    "outputs": [],
    "source": [
     "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- DEMO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.cousera.org"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -457,6 +462,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- DEMO - httpbin: HTTP Request & Response Service"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://httpbin.org/post #Returns POST data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -469,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -487,22 +506,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response.text\n",
     "type(response.text)"
@@ -517,22 +525,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bytes"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response.text\n",
     "type(response.content)"
@@ -647,6 +644,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Markup sample"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -676,6 +680,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Markup sample](dormouse.html \"The Dormouse's story\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Import and Get BeautifulSoup object"
    ]
   },
@@ -688,7 +699,10 @@
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
-    "soup = BeautifulSoup(html_markup, 'lxml')"
+    "\n",
+    "f = open('dormouse.html')\n",
+    "\n",
+    "soup = BeautifulSoup(f.read(), 'lxml')"
    ]
   },
   {
@@ -1049,7 +1063,8 @@
    },
    "outputs": [],
    "source": [
-    "target = soup.find(id=\"link3\")\n"
+    "target = soup.find(id=\"link3\")\n",
+    "target"
    ]
   },
   {
@@ -1221,12 +1236,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": []
   }
  ],
@@ -1246,7 +1259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
