--- a/notebook/crawler/Sample2 - Tumblr.ipynb
+++ b/notebook/crawler/Sample2 - Tumblr.ipynb
@@ -68,8 +68,14 @@
     "### 6. Check box \"我不是機器人\" and Click \"註冊\"\n",
     "<img src=\"images/oauth/04.png\"/>\n",
     "\n",
-    "### 7. Get Tumblr API oauth sample code, and save it!\n",
-    "<img src=\"images/oauth/05.png\"/>"
+    "### 7. Check \"Explore API\"\n",
+    "<img src=\"images/oauth/05.png\"/>\n",
+    "\n",
+    "### 8. Check \"允許\"\n",
+    "<img src=\"images/oauth/06.png\"/>\n",
+    "\n",
+    "### 9. Get Tumblr API oauth sample code, and save it!\n",
+    "<img src=\"images/oauth/07.png\"/>"
    ]
   },
   {
@@ -344,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
