--- a/notebook/crawler/Web Crawler in Python.ipynb
+++ b/notebook/crawler/Web Crawler in Python.ipynb
@@ -46,31 +46,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### HTTP 1.1: Method definitions\n",
-    "\n",
-    "> OPTIONS\n",
-    "\n",
-    "> GET\n",
-    "\n",
-    "> HEAD\n",
-    "\n",
-    "> POST\n",
-    "\n",
-    "> PUT\n",
-    "\n",
-    "> DELETE\n",
-    "\n",
-    "> TRACE\n",
-    "\n",
-    "> CONNECT\n",
-    "\n",
-    "Reference: http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Two HTTP Request Methods: GET vs. POST\n",
     "> Image as postcard and envelope"
    ]
@@ -86,7 +61,8 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "http://www.somewhere.com/test/demo_form.html?key1=value1&key2=value2 "
+    "http://www.somewhere.com/\n",
+    "http://www.somewhere.com/test/demo_form.html?key1=value1&key2=value2"
    ]
   },
   {
@@ -142,6 +118,39 @@
     "> POST requests cannot be bookmarked\n",
     "\n",
     "> POST requests have no restrictions on data length"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to know what kind of HTTP request in a page ?\n",
+    "> https://www.google.com"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### HTTP 1.1: Method definitions\n",
+    "\n",
+    "> OPTIONS\n",
+    "\n",
+    "> GET\n",
+    "\n",
+    "> HEAD\n",
+    "\n",
+    "> POST\n",
+    "\n",
+    "> PUT\n",
+    "\n",
+    "> DELETE\n",
+    "\n",
+    "> TRACE\n",
+    "\n",
+    "> CONNECT\n",
+    "\n",
+    "Reference: http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html\n"
    ]
   },
   {
@@ -246,7 +255,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -302,7 +311,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -531,7 +540,7 @@
    },
    "outputs": [],
    "source": [
-    "response.text\n",
+    "response.content\n",
     "type(response.content)"
    ]
   },
@@ -539,12 +548,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "---\n",
-    "\n",
-    "---\n",
-    "\n",
     "---\n",
     "\n",
     "---\n",
@@ -703,17 +706,6 @@
     "f = open('dormouse.html')\n",
     "\n",
     "soup = BeautifulSoup(f.read(), 'lxml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "type(soup)"
    ]
   },
   {
@@ -1021,6 +1013,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for link in soup.find_all('a'):\n",
+    "    print(link.get('href'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1063,8 +1067,18 @@
    },
    "outputs": [],
    "source": [
-    "target = soup.find(id=\"link3\")\n",
-    "target"
+    "target = soup.find(id=\"link3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(target)"
    ]
   },
   {
@@ -1075,7 +1089,7 @@
    },
    "outputs": [],
    "source": [
-    "target.name"
+    "print(target.name)"
    ]
   },
   {
@@ -1086,7 +1100,7 @@
    },
    "outputs": [],
    "source": [
-    "target.string"
+    "print(target.string)"
    ]
   },
   {
@@ -1236,10 +1250,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": []
   }
  ],
