--- a/notebook/crawler/Web Crawler in Python.ipynb
+++ b/notebook/crawler/Web Crawler in Python.ipynb
@@ -69,6 +69,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- key1=value1&key2=value2 is parameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> GET requests can be cached\n",
     "\n",
     "> GET requests remain in the browser history\n",
@@ -105,6 +112,13 @@
     "POST /test/demo_form.html HTTP/1.1\n",
     "Host: www.somewhere.com\n",
     "key1=value1&key2=value2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- key1=value1&key2=value2 is data."
    ]
   },
   {
@@ -168,7 +182,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python librarys for web crawler"
+    "# Python librarys for web crawler\n",
+    ">### Requests - Process HTTP request and response\n",
+    "\n",
+    ">### BeautifulSoup4 - Sits atop an HTML or XML parser\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -176,8 +195,9 @@
    "metadata": {},
    "source": [
     "## Requests: Process HTTP request and response \n",
-    "- Requests is an Apache2 Licensed HTTP library\n",
-    "- Powered by urllib3, which is embedded within Requests.\n",
+    "- GET method\n",
+    "- POST method\n",
+    "- Response method\n",
     "- Document: http://docs.python-requests.org/en/latest/"
    ]
   },
@@ -559,11 +579,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BeautifulSoup4:  sits atop an HTML or XML parser\n",
-    "\n",
-    "- A Python library for pulling data out of HTML and XML files. It works with your favorite parser to provide idiomatic ways of navigating, searching, and modifying the parse tree. It commonly saves programmers hours or days of work.\n",
-    "\n",
-    "- it also supports a number of third-party Python parsers. One is the lxml parser.\n",
+    "## BeautifulSoup4:  Sits atop an HTML or XML parser\n",
+    "- Using third-party Python parser - lxml\n",
+    "- TAG, Attribute\n",
     "- Document: http://www.crummy.com/software/BeautifulSoup/bs4/doc/"
    ]
   },
