--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -18,7 +18,8 @@
     "    + Control Structures\n",
     "    + function\n",
     "\n",
-    "- basic HTML knowledge ( since we want to make a web crawler )\n",
+    "- basic HTML knowledge \n",
+    "  since we want to make a web crawler\n",
     "\n",
     "-  little knowledge about shell commands (pwd, ls, cd)"
    ]
@@ -60,6 +61,14 @@
     "You can follow this official installation [guide](http://conda.pydata.org/docs/installation.html).\n",
     "\n",
     "Conda make it easy to install third libraries, which are often a platform-dependent C, C++, or Fortran code.\n",
+    "\n",
+    "```\n",
+    "$ # pip install lxml\n",
+    "$ conda install lxml\n",
+    "\n",
+    "$ # pip install numpy\n",
+    "$ conda install numpy\n",
+    "```\n",
     "\n",
     "## Windows\n",
     "\n",
@@ -158,6 +167,7 @@
     "$ activate hour_of_code # Windows\n",
     "\n",
     "... Operation in hour_of_code env\n",
+    "$ conda install jupyter # install jupyter notebook in the hour_fo_code env\n",
     "... Operation in hour_of_code env\n",
     "... Operation in hour_of_code env\n",
     "\n",
@@ -214,6 +224,24 @@
     "## Strong/Active community\n",
     "\n",
     "[Compare Languages on Open HUB](https://goo.gl/OrPYiu)\n",
+    "\n",
+    "Python Community in Taiwan\n",
+    "\n",
+    "Taipei.py - [Taipei Python User Group](http://www.meetup.com/Taipei-py/)\n",
+    "\n",
+    "PyHUG - [Python Hsinchu User Group](http://www.meetup.com/pythonhug/)\n",
+    "\n",
+    "[PyLadies Taiwan](http://www.meetup.com/PyLadiesTW/)\n",
+    "\n",
+    "[Tainan.py - Python Tainan User Group](http://www.meetup.com/Tainan-py-Python-Tainan-User-Group/)\n",
+    "\n",
+    "[Kaohsiung.py - Kaohsiung Python User Group](http://www.meetup.com/Kaohsiung-Python-Meetup)\n",
+    "\n",
+    "[Taichung.py - Taichung Python User Group](http://www.meetup.com/Taichung-Python-Meetup/)\n",
+    "\n",
+    "[Django Girls Taipei](https://djangogirls.org/taipei/)\n",
+    "\n",
+    "[Hualien.py - Hualien Python User Group](http://www.meetup.com/Hualien-Py/)\n",
     "\n",
     "## Python is Free\n",
     "\n",
