--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -225,7 +225,7 @@
     "\n",
     "[Compare Languages on Open HUB](https://goo.gl/OrPYiu)\n",
     "\n",
-    "Python Community in Taiwan\n",
+    "### Python Community in Taiwan\n",
     "\n",
     "Taipei.py - [Taipei Python User Group](http://www.meetup.com/Taipei-py/)\n",
     "\n",
