--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -68,17 +68,30 @@
     "\n",
     "$ # pip install numpy\n",
     "$ conda install numpy\n",
-    "```\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "\n",
-    "## Windows\n",
+    "## Conda installation\n",
     "\n",
-    "Download the Miniconda installer exe file.\n",
+    "### Windows\n",
+    "\n",
+    "Download the Miniconda installer [exe file](http://conda.pydata.org/miniconda.html).\n",
     "\n",
     "Double click that exe flie and follow the instructions.\n",
     "\n",
-    "## Mac, Linux\n",
     "\n",
-    "Dowanload the bash installer script and excute it in your terminal.\n",
+    "## Mac\n",
+    "\n",
+    "Dowanload the bash installer [script](http://conda.pydata.org/miniconda.html) and excute it in your terminal.\n",
     "\n"
    ]
   },
@@ -86,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -126,7 +139,17 @@
     "\n",
     "cd /path/to/some/direcotry - change directory to /path/to/some/direcotry\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "#### Exercise\n",
     "\n",
     "Open your terminal, type\n",
@@ -191,22 +214,74 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Exercise\n",
+    "\n",
+    "Open your terminal, type\n",
+    "\n",
+    "```\n",
+    "$ conda info -e\n",
+    "\n",
+    "$ source activate root # Linux, OS X\n",
+    "$ activate root # Windows\n",
+    "\n",
+    "$ which python\n",
+    "\n",
+    "$ $ source activate hour_of_code # Linux, OS X\n",
+    "$ activate hour_of_code # Windows\n",
+    "\n",
+    "$ which python\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
     "# Why Python - Life is short, you need Python.\n",
     "\n",
+    "- Python is easy to learn and use\n",
+    "- General-purpose\n",
+    "- Quick/Rapid prototype\n",
+    "- Strong/Active community\n",
+    "- Python is Free\n",
+    "- Python is Fun\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Python is easy to learn and use\n",
     "\n",
-    "## Python is easy to learn and use\n",
     "  + Simpler syntax\n",
     "  + Readable pseudo-code\n",
-    "  + Expressive and succinct\n",
-    "\n",
-    "## General-purpose\n",
+    "  + Expressive and succinct\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# General-purpose\n",
     "\n",
     "  + [Extensive Libraries](https://github.com/vinta/awesome-python)\n",
-    "\n",
     "\n",
     "1. Web development (django, flask, ...)\n",
     "\n",
@@ -221,14 +296,18 @@
     "6. Data processing (pandas, ...)\n",
     "\n",
     "7. Business applications (....)\n",
-    "\n",
-    "## Quick/Rapid prototype\n",
-    "\n",
-    "## Strong/Active community\n",
-    "\n",
-    "[Compare Languages on Open HUB](https://goo.gl/OrPYiu)\n",
-    "\n",
-    "### Python Community in Taiwan\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Python Community in Taiwan\n",
     "\n",
     "Taipei.py - [Taipei Python User Group](http://www.meetup.com/Taipei-py/)\n",
     "\n",
@@ -244,25 +323,38 @@
     "\n",
     "[Django Girls Taipei](https://djangogirls.org/taipei/)\n",
     "\n",
-    "[Hualien.py - Hualien Python User Group](http://www.meetup.com/Hualien-Py/)\n",
-    "\n",
-    "## Python is Free\n",
-    "\n",
-    "matlab?\n",
-    "\n",
-    "numpy\n",
-    "scipy\n",
-    "matplotlib\n",
-    "\n",
-    "\n",
-    "## Python is Fun"
+    "[Hualien.py - Hualien Python User Group](http://www.meetup.com/Hualien-Py/)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "\n",
+    "# Why Python - Life is short, you need Python.\n",
+    "\n",
+    "\n",
+    "\n",
+    "- Quick/Rapid prototype\n",
+    "\n",
+    "- Python is Free\n",
+    "\n",
+    "    matlab?\n",
+    "\n",
+    "    numpy, scipy, matplotlib\n",
+    "\n",
+    "- Python is Fun"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -272,7 +364,7 @@
     "\n",
     "[What's REALLY New in Python 3](http://migrateup.com/whats-really-new-in-python-3/?utm_campaign=CodeTengu&amp;utm_medium=web&amp;utm_source=CodeTengu_14)\n",
     "\n",
-    "## Library compatibility with Python 3?\n",
+    "#### Library compatibility with Python 3?\n",
     "\n",
     "Choose a version comes down to the libraries you need\n",
     "\n",
@@ -290,7 +382,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -316,6 +408,20 @@
     "pwd, cd, ls, cat, which,\n",
     "git, ssh"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Any Question?\n",
+    "\n",
+    "Feel free to ask any questions about Python\n",
+    "on [Python 台灣愛好者群組](https://groups.google.com/forum/#!forum/pythontw)."
+   ]
   }
  ],
  "metadata": {
@@ -335,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
