--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -327,10 +327,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "meetup_url = {\n",
+    "    'Taipei': 'http://www.meetup.com/Taipei-py/',\n",
+    "    'PyHUG': 'http://www.meetup.com/pythonhug/',\n",
+    "    'Tainan': 'http://www.meetup.com/Tainan-py-Python-Tainan-User-Group/',\n",
+    "    'Kaohsiung': 'http://www.meetup.com/Kaohsiung-Python-Meetup',\n",
+    "    'Taichung': 'http://www.meetup.com/Taichung-Python-Meetup/',\n",
+    "    'Django Grils': 'https://djangogirls.org/taipei/',\n",
+    "    'Hualien': 'http://www.meetup.com/Hualien-Py/'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['PyHUG', 'Taichung', 'Tainan', 'Django Grils', 'Kaohsiung', 'Taipei', 'Hualien'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "cities = meetup_url.keys()\n",
+    "print(cities)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyHUG http://www.meetup.com/pythonhug/\n"
+     ]
+    }
+   ],
+   "source": [
+    "city = random.choice(list(cities))\n",
+    "print(city, meetup_url[city])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
