--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -59,7 +59,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -74,7 +74,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -149,7 +149,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -164,7 +164,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -253,7 +253,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -268,7 +268,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -284,7 +284,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -300,7 +300,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -326,7 +326,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -341,7 +341,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -383,7 +383,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -397,7 +397,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -412,7 +412,7 @@
     "collapsed": true,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -427,7 +427,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -594,7 +594,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -608,7 +608,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -622,7 +622,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -650,7 +650,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -666,7 +666,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -680,7 +680,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -695,7 +695,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -710,7 +710,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -743,23 +743,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'hello.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-c117650ae5fd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moriginal_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'hello.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mline_num\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0moriginal_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'hello.txt'"
-     ]
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "original_file = open('hello.txt')\n",
     "\n",
@@ -803,7 +794,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -847,7 +838,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -881,15 +872,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
     "## math"
    ]
@@ -900,7 +889,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -927,7 +916,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -948,7 +937,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -963,7 +952,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -1005,7 +994,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -1019,7 +1008,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -1031,7 +1020,18 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "PyCon2016 Volunteers Needed!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
     }
    },
    "source": [
