2_python_quick_learning.ipynb

--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -361,18 +361,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# dict\n",
+    "- associative array\n",
+    "- map"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "foo = {1: 'one', 2: 'two', 3: 'three'}\n",
+    "foo = {1: 'one', 'two': 2, 'three': 3}\n",
     "print(foo)"
    ]
   },
@@ -402,7 +415,7 @@
    },
    "outputs": [],
    "source": [
-    "foo[4]"
+    "foo['four']"
    ]
   },
   {
@@ -417,7 +430,7 @@
    },
    "outputs": [],
    "source": [
-    "foo[4] = 'four'"
+    "foo['four'] = 4"
    ]
   },
   {
@@ -432,7 +445,7 @@
    },
    "outputs": [],
    "source": [
-    "foo[4]"
+    "foo['four']"
    ]
   },
   {
@@ -465,6 +478,57 @@
    "source": [
     "foo.clear()\n",
     "print(foo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "meetup_url = {\n",
+    "    'Taipei': 'http://www.meetup.com/Taipei-py/',\n",
+    "    'PyHUG': 'http://www.meetup.com/pythonhug/',\n",
+    "    'Tainan': 'http://www.meetup.com/Tainan-py-Python-Tainan-User-Group/',\n",
+    "    'Kaohsiung': 'http://www.meetup.com/Kaohsiung-Python-Meetup',\n",
+    "    'Taichung': 'http://www.meetup.com/Taichung-Python-Meetup/',\n",
+    "    'Django Grils': 'https://djangogirls.org/taipei/',\n",
+    "    'Hualien': 'http://www.meetup.com/Hualien-Py/'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "meetup_url['彰化 python']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "meetup_url['彰化 python'] = '還沒有'\n",
+    "meetup_url['彰化 python']"
    ]
   },
   {
@@ -872,11 +936,79 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cities = meetup_url.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cities = meetup_url.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "list(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "city = random.choice(list(cities))\n",
+    "print(city, meetup_url[city])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -889,7 +1021,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -1086,7 +1218,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1099,7 +1231,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -1114,7 +1246,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1133,7 +1265,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -1150,7 +1282,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -1164,7 +1296,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -1180,7 +1312,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
