--- a/notebook/crawler/Web Crawler in Python.ipynb
+++ b/notebook/crawler/Web Crawler in Python.ipynb
@@ -316,8 +316,7 @@
    "outputs": [],
    "source": [
     "response = requests.get(\"http://httpbin.org/get\", params={\"key1\": \"value1\", \"key2\": \"value2\"})\n",
-    "print(response)\n",
-    "print(response.url)"
+    "print(response)"
    ]
   },
   {
@@ -360,20 +359,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- DEMO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://www.cousera.org"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---"
    ]
   },
@@ -407,7 +392,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -462,7 +447,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -485,20 +470,6 @@
    "outputs": [],
    "source": [
     "print(response.text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- DEMO - httpbin: HTTP Request & Response Service"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://httpbin.org/post #Returns POST data."
    ]
   },
   {
@@ -1092,7 +1063,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1129,152 +1100,8 @@
     "\n",
     "---\n",
     "\n",
-    "---\n",
-    "\n",
-    "---\n",
-    "\n",
-    "---\n",
-    "\n",
     "---"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# DEMO: Get all hyperlink in PyCon Taiwan front page\n",
-    "<img src='images/pycon.png'/>\n",
-    "### https://tw.pycon.org/2016"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Quick start"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import necessary librarys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import lxml\n",
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Make a GET request"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "url = \"https://tw.pycon.org/2016\"\n",
-    "response = requests.get(url)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Parsing response data using BeautifulSoup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "soup = BeautifulSoup(response.text, 'lxml')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Print PyCon Taiwan front page content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(soup.prettify())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Find out hyperlink string via BeautifulSoup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for link in soup.find_all('a'):\n",
-    "    print(link.get('href'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Try again to find out hyperlink string via BeautifulSoup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for link in soup.find_all('a', target=\"_blank\"):\n",
-    "    print(link.get('href'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
